## Process this file with automake to produce Makefile.in


############################################################
## サブディレクトリの指定
############################################################

SUBDIRS =


############################################################
## clean ターゲットの指定
############################################################

CLEANFILES = ymtools.h

MAINTAINERCLEANFILES = Makefile.in


############################################################
## HEADERS ターゲットの指定
############################################################

noinst_HEADERS = \
	acc_user.h \
	mainpage.h \
	veriuser.h \
	vpi_user.h \
	ymassert.h \
	ymmath.h \
	ymnsdef.h
